# vpnsci-sustech

./: .gitattributes  .gitignore  FAQ.md  README.md  pyproject.toml
docs/: README.md  requirements.md
docs/agent-workflows/: paper-search-pro-full-workflow.md  seed-preview-html-report.md
docs/releases/: 2026-05-28-codex-full-workflow-automation.md  2026-05-28-phase3-bridge-correction.md  2026-05-29-docs-and-local-mcp-refresh.md  2026-05-29-query-display-workflow.md  2026-05-29-seed-preview-report-fallbacks.md  README.md
tools/: paper-search-pro.UPSTREAM.md
tools/paper-search-pro/: .gitignore  .skillignore  NOTICE.md  README.md  README.zh.md  SKILL.md  THIRD_PARTY.md
tools/paper-search-pro/assets/: default_config.yaml  md_template.md.jinja
tools/paper-search-pro/evals/: evals.json
tools/paper-search-pro/references/: arxiv_helper_cheatsheet.md  citation_chasing.md  (+15 more)
vpnsci/: auth.py  config.py  fetcher.py  mcp_server.py  schools.py
vpnsci_sustech/: __init__.py  auth.py  browser_cdp.py  browser_session.py  carsi.py  cli.py  config.py  fetcher.py  flaresolverr.py  http_clients.py  http_utils.py  mcp_server.py  models.py  paper_search_pro_adapter.py  report_bridge.py  report_tools.py  schools.py  site_policy.py
vpnsci_sustech/data/: publisher_carsi.json  webvpn.json
vpnsci_sustech/extractors/: html_extractor.py  pdf_extractor.py
vpnsci_sustech/sources/: __init__.py  arxiv.py  elsevier_api.py  openalex.py  publisher_search.py  query_normalization.py  search_cache.py  search_mode.py  search_models.py  semantic_scholar.py  standard_search.py  unpaywall.py
(+86 files in other folders)
