[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpnsci-sustech"
version = "0.1.0"
description = "Academic paper fetcher with multi-university WebVPN support"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "selenium>=4.15.0",
    "pymupdf>=1.23.0",
    "mcp[cli]>=1.0.0",
    "pycryptodome>=3.15.0",
]

[project.scripts]
vpnsci-sustech = "vpnsci_sustech.cli:app"
vpnsci-sustech-mcp = "vpnsci_sustech.mcp_server:main"

[tool.setuptools.packages.find]
include = ["vpnsci_sustech*"]

[tool.setuptools.package-data]
vpnsci_sustech = ["data/*.json"]
